nginx-service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    istio-discovery: enabled

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/ingress-use-waypoint: "true"
    istio.io/use-waypoint: istio-waypoint
    istio.io/use-waypoint-namespace: istio-waypoint
spec:
  selector:
    app: nginx-server
  ports:
    - protocol: TCP
      port: 9998
      targetPort: 443
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: nginx
  namespace: nginx
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
    sectionName: tls-listener
  rules:
  - backendRefs:
    - name: nginx-service
      port: 9998

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-payload-server
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
        istio.io/dataplane-mode: ambient
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 443
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
        - name: data-storage
          mountPath: /data
        - name: tls-volume
          mountPath: /etc/nginx/tls
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config
      - name: data-storage
        emptyDir: {}
      - name: tls-volume
        emptyDir: {}
